Fix Demonstrated Strengths card width on mobile

--- a/css/components/core.css
+++ b/css/components/core.css
@@ -104,4 +104,10 @@
       line-height:1.5;
     }
   }
+
+  @media (max-width: 768px) {
+    #about-me .grid-container .icon-info{
+      width:100%;
+    }
+  }
 }
